--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,73 @@
 #app {
-    height: 100vh;
-    text-align: center;
+    /* height: 100vh; */
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+}
+
+#control-panel {
+    height: 5vh;
+    width: 100vw;
+    background-color: rgb(30, 30, 30);
+    display: flex;
+    flex-direction:row;
+    justify-content: end;
+    widows: 1;
+    border-bottom: 1px solid #444;
+}
+
+.minimise {
+    aspect-ratio: 1/1;
+    height: 5vh;
+    background-color: rgb(40,40,40);
+    /* padding: 0.1rem; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+}
+.minimise:hover {
+    background-color: rgb(20, 20, 20);
+    transition: all 0.2s ease-in-out;
+}
+
+.maximise {
+    aspect-ratio: 1/1;
+    height: 5vh;
+    background-color:rgb(40,40,40);
+    display: flex;
+    justify-content: center;
+    transition: all 0.2s ease-in-out;
+    align-items: center;
+}
+.maximise:hover {
+    background-color: rgb(20, 20, 20);
+    transition: all 0.2s ease-in-out;
+}
+
+.quit {
+    aspect-ratio: 1/1;
+    height: 5vh;
+    background-color: rgb(40,40,40);
+    transition: all 0.5s linear;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.quit:hover{
+    background-color: red;
+    transition: all 0.2s ease-in-out;
+}
+
+#content {
+    /* height: 95vh; */
+    background-color: rgb(30, 30, 30);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* padding: 40px; */
 }
 
 #logo {
@@ -8,11 +75,49 @@
     width: 50%;
     height: 50%;
     margin: auto;
-    padding: 10% 0 0;
+    /* padding: 10% 0 0; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-origin: content-box;
+}
+
+.buttontoggle {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    border: 1px solid  white;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 40px
+    
+}
+
+.tgbutton {
+    padding: 5px;
+    cursor: pointer;
+    
+}
+
+.txtcols {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    /* background-color: red; */
+    width: 80%;
+    margin-top: 40px;
+}
+
+.txtarea {
+    /* margin: 40px; */
+    margin: 5px;
+    width: 50%;
+    resize: none;
+    border: 1px solid #555;
+    color: aliceblue;
+    background-color: #333333;
 }
 
 .result {
@@ -27,24 +132,24 @@
     line-height: 30px;
     border-radius: 3px;
     border: none;
-    margin: 0 0 0 20px;
-    padding: 0 8px;
+    margin: 40px 0 0 20px;
+    /* padding: 0 8px; */
     cursor: pointer;
 }
 
 .input-box .btn:hover {
-    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    
     color: #333333;
 }
 
 .input-box .input {
     border: none;
-    border-radius: 3px;
+    /* border-radius: 3px; */
     outline: none;
     height: 30px;
     line-height: 30px;
     padding: 0 10px;
-    background-color: rgba(240, 240, 240, 1);
+    background-color: rgb(244, 111, 111);
     -webkit-font-smoothing: antialiased;
 }
 
